# THE AUDITABLE FUND — an agent that trades a budget on a mandate and CANNOT LIE
# about what it did. Every decision is a jailed+attested turn, every trade an
# on-ledger verifiable receipt, every price proven via zkOracle. "An AI fund you
# audit instead of trust."
#
# ⚑ PAPER TRADING ONLY. There is NO code path here that places a real exchange
#   order or moves real custody. Fills are SIMULATED against attested prices. A
#   real-broker path would be an explicit, un-built, REVIEWED-GO change gated on
#   ember + a real broker integration — it is deliberately absent.
#
# This crate COMPOSES the real dregg primitives (it does not reimplement them):
#   * agent-platform  — the on-ledger R2 turn (`LocalNode` / `NodeMinter`): each
#                       trade lands as a light-client-verifiable finalized receipt.
#   * deos-hermes     — the attested brain (`AttestationCarrier` / `attest_turn` /
#                       `attestation_commitment` / `verify_zkoracle`): each decision
#                       is an authentic ∧ well-formed ∧ injection-free turn.
#   * dregg-zkoracle-prove — the `ZkOracleAttestation` a price / decision carries.
#   * grain-turn      — `ATTESTATION_SLOT`, the on-ledger slot the binding rides.
#   * dregg-agent     — the `GrainTurnMinter` trait `NodeMinter` implements.
[package]
name = "auditable-fund"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "AGPL-3.0-or-later"
description = "The auditable fund: an AI trading agent (PAPER-ONLY) whose every decision is an attested turn, every trade an on-ledger receipt, every price a zkOracle attestation — a track record a third party AUDITS instead of trusts."

[dependencies]
agent-platform = { path = "../agent-platform" }
# deos-hermes re-exports the zkOracle types (`ZkOracleAttestation`, `verify_zkoracle`,
# `AnthropicConfig`, `ProveError`, `ZkOracleError`) from `dregg-zkoracle-prove`, so the
# fund reaches the whole attestation surface through this one dependency.
deos-hermes = { path = "../deos-hermes" }
# The REAL price lane: `CoinbaseSpotOracle` / `PriceOracle` / `verify_coinbase_spot` — every
# fill is at a Coinbase spot quote carrying a re-verifiable `ZkOracleAttestation`. (deos-hermes
# re-exports the attestation *core* but not the price endpoints, so the fund depends on the
# price lane directly.)
dregg-zkoracle-prove = { path = "../zkoracle-prove" }
dregg-agent = { path = "../dregg-agent" }
# THE FEDERATION SEAM — `NodeTarget::Local` (default, the in-process `LocalNode`) or
# `Federation` (ALSO submit each landed trade turn to a real `DREGG_NODE_URL` node +
# confirm it landed). One flip from replicating the track record onto a live federation.
dregg-node-target = { path = "../node-target" }
blake3 = "1"

[lints]
workspace = true
