[package]
name = "dregg-bridge"
version.workspace = true
edition.workspace = true

# `test-utils` is a DEV/TEST gate only (loud, fail-closed: it ADDS test helpers, never
# removes a guarantee). The old `turn` feature gated the turn-proof verifier module —
# core semantics — and was removed: the verifier is always compiled in.
# See docs/FEATURE-HYGIENE.md.
[features]
test-utils = []

[dependencies]
dregg-commit = { path = "../commit" }
dregg-trace = { path = "../trace" }
dregg-circuit = { path = "../circuit" }
dregg-turn = { path = "../turn" }
dregg-types = { path = "../types" }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
dregg-macaroon = { path = "../macaroon" }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
getrandom = { workspace = true }
serde = { version = "1", features = ["derive"] }
# Lightweight TYPE-ONLY Solana wire crate for real mainnet vote-transaction
# ingestion (the `VoteInstruction`/`Vote`/`TowerSync`/`VoteStateUpdate` types).
# Deliberately NOT the `solana-sdk` monolith: these split crates pin
# curve25519-dalek 4.x / ed25519-dalek 2.x, unifying with the BabyBear/proof
# stack (verified: no version conflict). See docs/deos/TRUSTLESS-SOLANA-BRIDGE.md.
solana-vote-interface = { version = "6.0.2", default-features = false, features = ["serde", "bincode"] }
# bincode 1.x (Solana's instruction-data codec) for decoding the `VoteInstruction`
# carried in a real vote transaction's instruction data.
bincode = "1"

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1", features = ["full"] }
dregg-bridge = { path = ".", features = ["test-utils"] }
# Used by the solana_mirror end-to-end test to prove bridged $DREGG pays an
# execution-lease through the SAME `resolve_pay` rail the metered ToolGateway uses.
dregg-payable = { path = "../dregg-payable" }
dregg-cell = { path = "../cell" }
# Type-only: construct `solana_hash::Hash` when building real vote-tx fixtures.
solana-hash = "4"

[[bench]]
name = "presentation_bench"
harness = false
required-features = ["test-utils"]

[lints]
workspace = true
