[package]
name = "dregg-bridge"
version.workspace = true
edition.workspace = true

# `test-utils` is a DEV/TEST gate only (loud, fail-closed: it ADDS test helpers, never
# removes a guarantee). The old `turn` feature gated the turn-proof verifier module —
# core semantics — and was removed: the verifier is always compiled in.
# See docs/FEATURE-HYGIENE.md.
[features]
test-utils = []

[dependencies]
dregg-commit = { path = "../commit" }
dregg-trace = { path = "../trace" }
dregg-circuit = { path = "../circuit" }
dregg-turn = { path = "../turn" }
dregg-types = { path = "../types" }
# The committed mirror-ledger nullifier (`solana_mirror`/`stripe_mirror` derive a
# consume-once `dregg_cell::Nullifier` for the concurrency-safe double-mint gate).
dregg-cell = { path = "../cell" }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
dregg-macaroon = { path = "../macaroon" }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
getrandom = { workspace = true }
serde = { version = "1", features = ["derive"] }
# Stripe webhook verification (`stripe_mirror`): HMAC-SHA256 over the raw body is
# the real Stripe `Stripe-Signature` scheme; constant-time compare via `subtle`;
# the verified event JSON is parsed with `serde_json`. All workspace-pinned, light
# (no `async-stripe`/`stripe-rust` monolith pulled in). See stripe_mirror.rs docs.
hmac = { workspace = true }
subtle = { workspace = true }
serde_json = { workspace = true }
# Lightweight TYPE-ONLY Solana wire crate for real mainnet vote-transaction
# ingestion (the `VoteInstruction`/`Vote`/`TowerSync`/`VoteStateUpdate` types).
# Deliberately NOT the `solana-sdk` monolith: these split crates pin
# curve25519-dalek 4.x / ed25519-dalek 2.x, unifying with the BabyBear/proof
# stack (verified: no version conflict). See docs/deos/TRUSTLESS-SOLANA-BRIDGE.md.
solana-vote-interface = { version = "6.0.2", default-features = false, features = ["serde", "bincode"] }
# bincode 1.x (Solana's instruction-data codec) for decoding the `VoteInstruction`
# carried in a real vote transaction's instruction data.
bincode = "1"
# Type-only Solana stake interface for the REAL warmup/cooldown effective-stake
# curve (`Delegation::stake_v2` / `StakeHistory` / `StakeHistoryEntry` + the
# `warmup_cooldown_allowance` rate constants — 25% original / 9% tower). Pulled
# `default-features = false` (no `serde`/`sysvar`/`bincode` features): only the
# core `stake_history` + `state` + `warmup_cooldown_allowance` modules, which add
# NO new crates to the lockfile beyond what `solana-vote-interface` already pins
# (no curve25519 conflict). See docs/deos/TRUSTLESS-SOLANA-BRIDGE.md.
solana-stake-interface = { version = "4.3.0", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1", features = ["full"] }
dregg-bridge = { path = ".", features = ["test-utils"] }
# Used by the solana_mirror end-to-end test to prove bridged $DREGG pays an
# execution-lease through the SAME `resolve_pay` rail the metered ToolGateway uses.
dregg-payable = { path = "../dregg-payable" }
# Type-only: construct `solana_hash::Hash` when building real vote-tx fixtures.
solana-hash = "4"
# Type-only: construct `solana_pubkey::Pubkey` for the bank-state-provenance
# (pass 3) vote-account-data fixtures. `solana-vote-interface` + `bincode` are
# already normal deps and are reused by the provenance tests.
solana-pubkey = "4"

[[bench]]
name = "presentation_bench"
harness = false
required-features = ["test-utils"]

[lints]
workspace = true
