[package]
name = "dregg-captp"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
getrandom = { workspace = true }
bs58 = "0.5"
postcard = { version = "1", features = ["use-std"] }
dregg-types = { path = "../types" }
dregg-cell = { path = "../cell" }
# Real vetted AEAD stack for store-and-forward end-to-end encryption.
# X25519 ECDH (x25519-dalek) -> HKDF-SHA256 (hkdf+sha2) -> ChaCha20-Poly1305 (chacha20poly1305).
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = "0.12"
sha2 = { workspace = true }
zeroize = { workspace = true }

# UNCONDITIONAL (polarity-inverted, docs/FEATURE-HYGIENE.md §Lean): the §6 non-amplification
# verdict of `validate_handoff` routes through the VERIFIED Lean export
# (`dregg_captp_validate_handoff` = `handoffNonAmplifyingC`) on every native build, keeping the
# Rust lattice as the differential sibling. The ONE opt-out is the `no-lean-link` platform
# feature (wasm32 / zkvm guest — targets that cannot link libdregg_lean.a).
dregg-lean-ffi = { path = "../dregg-lean-ffi" }

[dev-dependencies]
serde_json = "1"

[features]
# PLATFORM gate, OFF by default: only wasm32/zkvm builds set it. It compiles the Rust-lattice
# fallback IN PLACE OF the verified Lean gate — a statement about the target's linker, never
# about which guarantees this dregg has.
no-lean-link = ["dregg-lean-ffi/no-lean-link"]

[lints]
workspace = true
