[package]
name = "dregg-captp"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
getrandom = { workspace = true }
bs58 = "0.5"
postcard = { version = "1", features = ["use-std"] }
dregg-types = { path = "../types" }
dregg-cell = { path = "../cell" }
# Post-quantum half of the HYBRID capability-handoff signatures (ML-DSA-65, FIPS 204).
# Derived deterministically from the same ed25519 seed as the classical identity, so a
# quantum adversary must break ed25519 AND module-lattice SIS to forge a handoff.
fips204 = "0.4"
# Real vetted AEAD stack for store-and-forward end-to-end encryption.
# X25519 ECDH (x25519-dalek) -> HKDF-SHA256 (hkdf+sha2) -> ChaCha20-Poly1305 (chacha20poly1305).
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = "0.12"
sha2 = { workspace = true }
zeroize = { workspace = true }
# Post-quantum half of the HYBRID transport session KEM (HNDL mitigation, `netlayer::hybrid`).
# ML-KEM-768 / FIPS 203, pure-Rust RustCrypto impl (no FFI; cross-compiles). The `kem` crate
# carries the Encapsulate/Decapsulate traits ml-kem is built on; rand_core 0.6 is the
# CryptoRngCore ml-kem/kem consume for keygen + encapsulation.
ml-kem = "0.2"
kem = "=0.3.0-pre.0"
rand_core = "0.6"

# FFI-FREE BY CONSTRUCTION: the §6 non-amplification verdict of `validate_handoff`, the
# process-drop GC verdict, and the pipeline FIFO resolve route through the `verified_gate` SEAM
# (`CaptpVerifiedGate`), never `dregg-lean-ffi` directly. A native node installs the Lean-backed
# gate (from `dregg-exec-lean`) once at startup; an FFI-free target (wasm / verifier-PD / pg) never
# registers one and the native Rust lattice / FIFO sibling decides. The deleted `no-lean-link`
# feature is now a dependency choice, not a flag.

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
