[package]
name = "dregg-cell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Agent cell model — capability-secure isolated execution contexts"

[features]
default = ["crypto"]
crypto = ["dep:bulletproofs", "dep:chacha20poly1305", "dep:curve25519-dalek", "dep:ed25519-dalek", "dep:getrandom", "dep:merlin", "dep:x25519-dalek", "dep:zeroize"]
# `dregg-circuit` is now an always-present dependency (the canonical
# capability-root scheme `dregg_circuit::cap_root` is load-bearing in the
# always-on `compute_canonical_state_commitment`, so it must not be
# feature-gated). `zkvm` additionally pulls in the proof-carrying helpers
# (`dregg-commit` / `dregg-dsl-runtime`).
zkvm = ["dep:dregg-commit", "dep:dregg-dsl-runtime"]
# `prover` forwards `dregg-circuit/prover` so the faithful 8-felt commitment
# (`compute_canonical_state_commitment_v9_felt8`) uses the CHIP-faithful chain
# (`wire_commit_8_chip`, the byte-twin of the circuit's published wide carrier).
# Cargo feature unification already builds circuit full-featured wherever the
# matched producer/executor stack (sdk/node/turn) links cell, so this adds no new
# feature surface there; a bare `dregg-cell` build (no prover) keeps the plain
# `wire_commit_8` chain (the carrier is never published in that configuration).
prover = ["dregg-circuit/prover"]
# SOUNDNESS GATE — DO NOT ENABLE IN PRODUCTION.
#
# `test-stubs` arms the *accept* path of `StubVerifier` (predicate.rs), which
# otherwise FAILS CLOSED on every proof. Without this feature (and outside
# `#[cfg(test)]`), `WitnessedPredicateRegistry::with_stubs()` installs verifiers
# that reject every proof — so a misconfigured host that selects the stub
# registry can never authorize a forged witness. Downstream *test* crates that
# rely on the permissive stub behavior enable `dregg-cell/test-stubs` in their
# `[dev-dependencies]`; production builds never set it.
test-stubs = []

[dependencies]
blake3 = "1"
bulletproofs = { version = "5", optional = true }
chacha20poly1305 = { workspace = true, optional = true }
curve25519-dalek = { version = "4", features = ["alloc"], optional = true }
ed25519-dalek = { version = "2", features = ["hazmat"], optional = true }
getrandom = { workspace = true, optional = true }
merlin = { version = "3", optional = true }
postcard = { version = "1", features = ["alloc"] }
# Required (always present) for the canonical capability-root scheme in
# `compute_canonical_capability_root` (`dregg_circuit::cap_root`). Default
# features, matching every other workspace consumer of circuit (node/sdk/turn,
# and wasm via `dregg-commit`) — Cargo feature unification already builds
# circuit full-featured everywhere, so this adds no new feature surface.
# NOTE: circuit's dependency on cell is dev-only, so this (cell → circuit)
# direction is acyclic.
dregg-circuit = { path = "../circuit" }
dregg-commit = { path = "../commit", optional = true }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime", optional = true }
dregg-types = { path = "../types" }
serde = { version = "1", features = ["derive", "std"] }
serde_json = { workspace = true }
x25519-dalek = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
# Integration tests under `cell/tests/` compile the crate as a normal
# dependency (so `cfg(test)` is NOT set for the library), so they arm the
# fail-closed `StubVerifier` accept path via the `test-stubs` feature. This is
# scoped to dev/test builds and is never enabled in production.
dregg-cell = { path = ".", features = ["test-stubs"] }

[lints]
workspace = true

[[example]]
name = "predicate_language"
path = "examples/predicate_language.rs"
