[workspace]
# Standalone workspace: keeps the heavy alloy/EVM dependency tree out of the
# main workspace. Build with: cd chain && cargo check

[package]
name = "dregg-chain"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Dregg Contributors"]
license = "AGPL-3.0-or-later"
description = "EVM settlement layer for dregg: Solidity contracts + host-side bridge flows (wrap prover: native gnark circuit, pending)"

[dependencies]
# EVM interaction (contract calls for on-chain verification)
alloy = { version = "1", features = ["providers", "contract", "signer-local", "reqwest"], optional = true }

# Dregg types for proof serialization
dregg-types = { path = "../types" }

# Shared with the circuit crate (STARK proof format)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
bincode = "1"

# Async runtime (sync: mpsc channels for the listener; time: poll intervals)
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

# Structured logging for the event listener
tracing = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Hex encoding for contract addresses / proof bytes
hex = "0.4"

[features]
# NO default feature. Without `mock`, the wrap/withdrawal/credential proof functions
# return `ChainError::WrapProverMissing` (fail-closed) — a build NEVER silently
# substitutes a SIMULATED proof for a real one. The real wrap prover is the native
# gnark FRI-verifier circuit (docs/deos/ETH-NATIVE-WRAP.md), not yet wired.
default = []
# Mock mode: simulated proofs for development/tests. Must be opted into, never the default.
mock = []
# Enable on-chain submission via alloy.
on-chain = ["dep:alloy"]
