[package]
name = "dregg-circuit-prove"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Heavy PROVE surface for dregg circuits: the p3-recursion tower (IVC, joint-turn aggregation, recursive witness bundles), the custom proof-bind engine, the shielded-action prover, and the LogUp lookup AIR. Depends on dregg-circuit (the verify floor) and the three recursion-only Plonky3 crates."

[dependencies]
dregg-circuit = { path = "../circuit" }

# Plonky3 core (workspace-pinned). The prove surface needs the full STARK + DFT
# stack plus the three RECURSION-ONLY crates (p3-recursion / p3-circuit /
# p3-circuit-prover) that the verify floor (`dregg-circuit`) deliberately does NOT
# pull — the prove/verify partition that keeps `cargo tree -p dregg-circuit` free
# of the recursion prover.
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
# p3-bn254 + p3-poseidon2: the BN254 scalar field, Poseidon2Bn254, and the
# ExternalLayerConstants constructor — used ONLY by the outer "shrink" config
# (dregg_outer_config.rs), the BN254-native-hash wrap layer.
p3-bn254 = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-batch-stark = { workspace = true }
p3-lookup = { workspace = true }
p3-poseidon2-circuit-air = { workspace = true }

# The THREE recursion-only crates — the heavy half of the split.
p3-recursion = { workspace = true }
p3-circuit = { workspace = true }
p3-circuit-prover = { workspace = true }

postcard = { version = "1", features = ["alloc"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
# The fhegg-solver Cert-F JSON bridge (cert_f_air::from_solution_json) parses the
# solver's f64 certificate wire format into an integer certificate the STARK proves.
serde_json = { workspace = true }
tracing = { version = "0.1" }
itertools = { version = "0.14" }
rand = { version = "0.10" }
rmp-serde = { version = "1.2" }
getrandom = { workspace = true }

# GPU prover backend (gpu_backend.rs): portable wgpu kernels behind the Plonky3
# trait seams (TwoAdicSubgroupDft + a GPU Mmcs). Runtime-dispatched: no adapter
# or non-GPU-able shapes fall back to the CPU path (no feature gate).
wgpu = "24"
pollster = "0.4"
bytemuck = "1"
rayon = "1"
# Montgomery-constant derivation for the BN254 WGSL codegen (already in the
# dependency graph via p3-bn254).
num-bigint = "0.4"

# --- WASM32 / WebGPU path (additive; native is entirely unaffected — these are
# target-gated) -----------------------------------------------------------------
# The on-device (browser) prover target. wgpu 24 exposes WebGPU on wasm32, but
# the whole non-dev dependency closure must compile for wasm32-unknown-unknown.
# The two blockers here are dependency-level, not gpu_backend-level:
#   * getrandom (0.3 + the 0.4 pulled transitively through `rand 0.10` under the
#     `dregg-circuit` verify floor) needs the `wasm_js` backend feature on
#     wasm32. Enabling it here (target-gated) turns it on for the whole build via
#     Cargo feature unification, without touching `circuit/`.
#   * the `getrandom_backend="wasm_js"` cfg is set in `.cargo/config.toml`
#     (wasm32-only rustflags), the standard getrandom-on-web incantation.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
# Async plumbing for the wasm readback path: the oneshot channel whose receiver
# is awaited in place of the native `poll(Wait)` spin.
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
dregg-cell = { path = "../cell" }
dregg-cell-crypto = { path = "../cell-crypto" }
# The recursion/shielded integration tests (moved from circuit/tests/) build real
# turns. dev-dep cycle (turn → circuit-prove) is permitted by Cargo.
dregg-turn = { path = "../turn" }
curve25519-dalek = { version = "4", features = ["alloc"] }
getrandom = { workspace = true }
serde_json = { workspace = true }
blake3 = "1"
tracing-subscriber = "0.3"

[lints]
workspace = true
